include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-power-manager
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/gs-prefs.png \
	figures/gpm-prefs-ac.png \
	figures/gpm-prefs-battery.png \
	figures/gpm-prefs-options.png \
	figures/gpm-charged.png \
	figures/gpm-critical.png \
	figures/gpm-low.png \
	figures/gpm-unplugged.png

#DOC_LINGUAS = uk 
