include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-power-manager
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/gs-prefs.png \
	figures/gpm-mouse-left.png \
	figures/gpm-mouse-right.png \
	figures/gpm-prefs-actions.png \
	figures/gpm-prefs-display.png \
	figures/gpm-prefs-notification.png \
	figures/gpm-prefs-processor.png \
	figures/gpm-prefs-sleep.png \
	figures/gpm-stats-graph.png \
	figures/gpm-charged.png \
	figures/gpm-critical.png \
	figures/gpm-low.png \
	figures/gpm-unplugged.png \
	figures/gpm-cell-capacity.png \
	figures/gpm-suspend-problem.png

DOC_LINGUAS = ca es fr hu it oc pa ru sv
